--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
     "lottie-react": "^2.4.0",
+    "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
