--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
+    "flowbite": "^2.3.0",
     "framer-motion": "^11.0.8",
     "lottie-react": "^2.4.0",
     "mdb-react-ui-kit": "^7.2.0",
