--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@lordicon/element": "^1.6.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/stripe-js": "^3.0.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -18,6 +19,7 @@
     "flowbite": "^2.3.0",
     "framer-motion": "^11.0.8",
     "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
