--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.4.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
