--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
-    "embla-carousel-react": "^8.0.0",
     "flowbite": "^2.3.0",
     "framer-motion": "^11.0.8",
     "lottie-react": "^2.4.0",
@@ -28,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
+    "react-image-zoom": "^1.3.1",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
